# SPTAG

./: CMakeLists.txt  Dockerfile  Dockerfile.cuda  MANIFEST.in
AnnService/: CMakeLists.txt
AnnService/inc/Core/Common/: BKTree.h  DistanceUtils.h  DistanceUtilsAVX.h  DistanceUtilsAVX512.h  DistanceUtilsSSE.h  InstructionUtils.h  KDTree.h  RelativeNeighborhoodGraph.h  SIMDUtils.h
AnnService/inc/Core/Common/cuda/tests/: Makefile
AnnService/inc/Core/SPANN/: Compressor.h
AnnService/inc/Helper/: AsyncFileReader.h  ConcurrentSet.h
AnnService/src/Client/: ClientWrapper.cpp
AnnService/src/Core/: MetadataSet.cpp
AnnService/src/Core/BKT/: BKTIndex.cpp
AnnService/src/Core/Common/: DistanceUtils.cpp  DistanceUtilsAVX.cpp  DistanceUtilsAVX512.cpp  DistanceUtilsSSE.cpp  InstructionUtils.cpp  SIMDUtils.cpp
AnnService/src/Core/KDT/: KDTIndex.cpp
AnnService/src/Helper/: Concurrent.cpp
GPUSupport/: CMakeLists.txt
Test/: CMakeLists.txt
Wrappers/: CMakeLists.txt
docs/: GettingStart.md  Parameters.md  Tutorial.ipynb
